feat: Responsive tests

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -4,3 +4,17 @@
 
   background-color: tomato;
 }
+
+@media (max-width: 768px) {
+  .colored-box {
+    background-color: yellow;
+  }
+}
+
+
+@media (max-width: 375px) {
+  .colored-box {
+    background-color: slateblue;
+  }
+
+}
